Remove openapi-generator for swatch-contracts.SubscriptionSyncResource
