# swatch-contracts/src/main/java/com/redhat/swatch/contract/model/OfferingProductTagsMapper.java
@@ -21,6 +21,7 @@
 package com.redhat.swatch.contract.model;
 
 import com.redhat.swatch.contract.openapi.model.OfferingProductTags;
+import com.redhat.swatch.contract.resource.BananaOfferingProductTags;
 import org.mapstruct.Mapper;
 
 @Mapper(componentModel = "cdi")
@@ -36,4 +37,6 @@ public interface OfferingProductTagsMapper {
   OfferingProductTags clientToApi(
       com.redhat.swatch.clients.swatch.internal.subscription.api.model.OfferingProductTags
           offeringProductTags);
+
+  BananaOfferingProductTags openApiToPojo(OfferingProductTags offeringProductTags);
 }
